--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: emoji_mart
-version: 1.0.0
-description: A dart wrapper for the emoji_mart react component
+version: 1.0.1
+description: Typed over_react component wrappers for the JS emoji-mart library.
 homepage: https://github.com/computmaxer/emoji_mart_dart
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.11.0 <3.0.0'
 
 dependencies:
   js: ^0.6.3
